k8s/auth-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-deployment
  namespace: manage-task
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      containers:
        - name: auth-service
          # Thay 'your-dockerhub-username' bằng username thật trên Docker Hub của bạn
          image: nguyenmen/manage-task-auth:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5001
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: manage-task
spec:
  selector:
    app: auth-service
  ports:
    - protocol: TCP
      port: 5001
      targetPort: 5001
  type: ClusterIP
