k8s/task-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task-deployment
  namespace: manage-task
spec:
  replicas: 1
  selector:
    matchLabels:
      app: task-service
  template:
    metadata:
      labels:
        app: task-service
    spec:
      containers:
        - name: task-service
          # Thay 'your-dockerhub-username' bằng username thật trên Docker Hub của bạn
          image: nguyenmen/manage-task-tasks:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5002
---
apiVersion: v1
kind: Service
metadata:
  name: task-service
  namespace: manage-task
spec:
  selector:
    app: task-service
  ports:
    - protocol: TCP
      port: 5002
      targetPort: 5002
  type: ClusterIP
